--- a/readSkySurveyMap.ipynb
+++ b/readSkySurveyMap.ipynb
@@ -53,11 +53,14 @@
     "    for line in f:\n",
     "        s = line.split()\n",
     "        \n",
-    "        ra[i]  = float(s[0])\n",
-    "        dec[i] = float(s[1])\n",
-    "        t[i]   = float(s[freq[fmhz]])      \n",
-    "        t2[i]  = float(s[freq[fmhz2]])\n",
-    "        i += 1\n",
+    "        try:\n",
+    "            ra[i] = float(s[0])\n",
+    "            dec[i] = float(s[1])\n",
+    "            t[i] = float(s[freq[fmhz]])\n",
+    "            t2[i] = float(s[freq[fmhz2]])\n",
+    "            i += 1\n",
+    "        except (IndexError, ValueError):\n",
+    "            print(s)\n",
     "    \n",
     "print(\"len: {0}\".format(len(t)))\n",
     "print(ra[0:10])\n",
