--- a/readSkySurveyMap.ipynb
+++ b/readSkySurveyMap.ipynb
@@ -43,9 +43,7 @@
     "t =   np.ndarray(n,dtype=np.float32)  # list()\n",
     "t2 =  np.ndarray(n,dtype=np.float32)  # list()\n",
     "\n",
-    "file_name = \"data/s56ellips_SS5019_data09-04-2012.txt\"\n",
-    "\n",
-    "# file_name = \"data/urans56ellips_SS5019_data09-04-2012_1.txt\"\n",
+    "file_name = \"tmp/exmpl.txt\"\n",
     "\n",
     "i = 0\n",
     "with open(file_name) as f:\n",
